Fixed refresh board upon second player's connection; Renamed the tasks/listeners

--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -80,6 +80,8 @@
             GameService.RemovePlayer(userId);
             InvokeAsync(StateHasChanged);
         });
+
+        await RefreshUI();
     }
 
     private string GetUserId()
@@ -101,7 +103,7 @@
     {
         if (firstRender)
         {
-            hubConnection.On<string>("RefreshUI", _ =>
+            hubConnection.On("RefreshUI", () =>
             {
                 InvokeAsync(StateHasChanged);
             });
