Removed unused parameter from AddPlayerTask

--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -68,9 +68,14 @@
         await hubConnection.StartAsync();
 
         // Add listener for future connections
-        hubConnection.On<string>("AddPlayer", //todo if changed to () instead of _, page errors on first load
-        
-            TestFunc()
+        hubConnection.On("AddPlayer", //todo if changed to () instead of _, page errors on first load
+            () =>
+            {
+                GameService.AddPlayer(userId);
+                WhatColourAmI = GameService.GetPlayerColourString(userId);
+                return InvokeAsync(StateHasChanged);
+            }
+    //TestFunc()
         );
 
         hubConnection.On<string>("RemovePlayer", _ =>
@@ -82,15 +87,15 @@
         await RefreshUI();
     }
 
-    private Action<string> TestFunc()
-    {
-        var userId = GetUserId();
-        GameService.AddPlayer(userId);
-        WhatColourAmI = GameService.GetPlayerColourString(userId);
-        InvokeAsync(StateHasChanged);
+    //private Action<string> TestFunc()
+    //{
+    //    var userId = GetUserId();
+    //    GameService.AddPlayer(userId);
+    //    WhatColourAmI = GameService.GetPlayerColourString(userId);
+    //    InvokeAsync(StateHasChanged);
 
-        return null;
-    }
+    //    return null;
+    //}
 
     private string GetUserId()
     {
