--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -60,10 +60,10 @@
         await hubConnection.StartAsync();
 
         // Add listener for future connections
-        hubConnection.On("AddPlayer", 
-            async () =>
+        hubConnection.On<string>("AddPlayer", 
+            async (newUserId) =>
             {
-                GameService.AddPlayer(userId);
+                GameService.AddPlayer(newUserId);
                 WhatColourAmI = GameService.GetPlayerColourString(userId);
                 await InvokeAsync(StateHasChanged);
             }
@@ -102,7 +102,7 @@
                 await InvokeAsync(StateHasChanged);
             });
 
-            await hubConnection.SendAsync("AddPlayerTask"); // todo: consider unhardcoding the string, maybe using nameof keyword?
+            await hubConnection.SendAsync("AddPlayerTask", GetUserId()); // todo: consider unhardcoding the string, maybe using nameof keyword?
         }
     }
 
