--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Reversi.Web.BlazorComponents;
 @using Reversi.Web.Services
 @using Reversi.Web.Services.Interfaces
+@using Microsoft.AspNetCore.Http
 @inject IGameService GameService
 @{
     ViewData["Title"] = "Home Page";
@@ -10,5 +11,5 @@
     <h1 class="display-4">Reversi Game</h1>
 </div>
 
-<center>@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered))</center>
+<center>@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered, Context))</center>
 <center>@(await Html.RenderComponentAsync<Chat>(RenderMode.ServerPrerendered))</center>
