--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -28,5 +28,5 @@
     <h1 class="display-4">Reversi Game</h1>
 </div>
 
-<center>@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered, new { UserId = UserId }))</center>
+<center>@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered, new { UserId }))</center>
 <center>@(await Html.RenderComponentAsync<Chat>(RenderMode.ServerPrerendered))</center>
