--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -23,7 +23,8 @@
 				@for (int col = 0; col < DisplayedBoard[row].Length; col++)
 				{
 					<td>
-						<TileComponent message="@DisplayedBoard[row][col].ToString()" row="@row" column="@col" OnMoveSelected="MoveSelected"></TileComponent>
+                        <TileComponent message="@DisplayedBoard[row][col].ToString()" row="@row" column="@col" OnMoveSelected="MoveSelected" 
+                                       ShowLegalSquares="@(WhatColourAmI == GameService.GetCurrentPlayer())"></TileComponent>
 					</td>
 				}
 			</tr>
