--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -24,7 +24,7 @@
 				{
 					<td>
                         <TileComponent message="@DisplayedBoard[row][col].ToString()" row="@row" column="@col" OnMoveSelected="MoveSelected" 
-                                       ShowLegalSquares="@(WhatColourAmI == GameService.GetCurrentPlayer())"></TileComponent>
+                                       ShowLegalSquares="@ShowLegalSquares"></TileComponent>
 					</td>
 				}
 			</tr>
@@ -38,6 +38,9 @@
     
     public string WhatColourAmI;
     public string[] DisplayedBoard => GameService.GetOutput();
+
+    private bool ShowLegalSquares => WhatColourAmI == GameService.GetCurrentPlayer();
+
     protected async Task MoveSelected(string move)
     {
         var row = int.Parse(move.Split(',')[0]);
@@ -106,4 +109,6 @@
             await hubConnection.DisposeAsync();
         }
     }
+
+
 }
