--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -8,7 +8,7 @@
 @inject IHttpContextAccessor HttpContextAccessor
 <CascadingValue Value="@GameService">
     <div class="flex col-md-5">
-		<MessageComponent/>
+		<MessageComponent IsUsersTurn="@IsUsersTurn"/>
 		<GameInformation/>
 		<ScoreComponent/>
 		<br />
@@ -24,7 +24,7 @@
 				{
 					<td>
                         <TileComponent message="@DisplayedBoard[row][col].ToString()" row="@row" column="@col" OnMoveSelected="MoveSelected" 
-                                       ShowLegalSquares="@ShowLegalSquares"></TileComponent>
+                                       ShowLegalSquares="@IsUsersTurn"></TileComponent>
 					</td>
 				}
 			</tr>
@@ -39,7 +39,7 @@
     public string WhatColourAmI;
     public string[] DisplayedBoard => GameService.GetOutput();
 
-    private bool ShowLegalSquares => WhatColourAmI == GameService.GetCurrentPlayer();
+    private bool IsUsersTurn => WhatColourAmI == GameService.GetCurrentPlayer();
 
     protected async Task MoveSelected(string move)
     {
