--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -9,10 +9,11 @@
 <CascadingValue Value="@GameService">
     <div class="flex col-md-5">
         <label><b>Who I am:</b> @WhatColourAmI</label>
-		<MessageComponent IsUsersTurn="@IsUsersTurn"/>
+		
 		<ScoreComponent/>
         <br />
-        <GameInformation UserId="UserId"/>
+        <WhoIAm UserId="UserId"/>
+        <MessageComponent IsUsersTurn="@IsUsersTurn" />
     </div>
 </CascadingValue>
 <div class="flex">
