Let players know if it's their turn or their opponent's turn

--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -12,7 +12,7 @@
 		
 		<ScoreComponent/>
         <br />
-        <WhoIAm UserId="UserId"/>
+        <WhoIAm UserId="@UserId"/>
         <MessageComponent IsUsersTurn="@IsUsersTurn" />
     </div>
 </CascadingValue>
