Fixed alignment of messages and made line breaks consistently in subcomponents

--- a/Reversi.Web/BlazorComponents/MessageComponent.razor
+++ b/Reversi.Web/BlazorComponents/MessageComponent.razor
@@ -1,22 +1,18 @@
 ﻿@using Reversi.Web.Services.Interfaces;
 @using Microsoft.AspNetCore.Components.Web
 
-@if (IsUsersTurn)
+@if (!string.IsNullOrEmpty(Message))
 {
-    <label style="color:red">@PersonalMessage</label>
+    <label style="color:red">@Message</label>
+    <br />
 }
-<label style="color:red">@Message</label>
-<br />
 
 @code {
     [CascadingParameter]
     public IGameService GameService { get; set; }
+    
     [Parameter]
     public bool IsUsersTurn { get; set; }
-    public string Message => GameService.GetMessage();
-    public string PersonalMessage => GameService.GetPersonalMessage();
-    //public void Refresh()
-    //{
-    //    StateHasChanged();
-    //}
+
+    public string Message => IsUsersTurn ? GameService.GetPersonalMessage() : GameService.GetMessage();
 }
