--- a/Reversi.Web/BlazorComponents/Chat.razor
+++ b/Reversi.Web/BlazorComponents/Chat.razor
@@ -7,13 +7,13 @@
 <div class="form-group">
 	<label>
 		User:
-		<input @bind="userInput" />
+		<input @bind="_userInput" />
 	</label>
 </div>
 <div class="form-group">
 	<label>
 		Message:
-		<input @bind="messageInput" size="50" />
+		<input @bind="_messageInput" size="50" />
 	</label>
 </div>
 <button @onclick="Send" disabled="@(!IsConnected)">Send</button>
@@ -21,45 +21,45 @@
 <hr>
 
 <ul id="messagesList">
-	@foreach (var message in messages)
+	@foreach (var message in _messages)
 	{
 		<li>@message</li>
 	}
 </ul>
 
 @code {
-	private HubConnection hubConnection;
-	private List<string> messages = new();
-	private string userInput;
-	private string messageInput;
+	private HubConnection _hubConnection;
+	private readonly List<string> _messages = new();
+	private string _userInput;
+	private string _messageInput;
 
 	protected override async Task OnInitializedAsync()
 	{
-		hubConnection = new HubConnectionBuilder()
+		_hubConnection = new HubConnectionBuilder()
 			.WithUrl(NavigationManager.ToAbsoluteUri("/chathub"))
 			.Build();
 
-		hubConnection.On<string, string>("ReceiveMessage", (user, message) =>
+		_hubConnection.On<string, string>("ReceiveMessage", (user, message) =>
 		{
 			var encodedMsg = $"{user}: {message}";
-			messages.Add(encodedMsg);
+			_messages.Add(encodedMsg);
 			InvokeAsync(StateHasChanged);
 		});
 
-		await hubConnection.StartAsync();
+		await _hubConnection.StartAsync();
 	}
 
 	async Task Send() =>
-		await hubConnection.SendAsync("SendMessage", userInput, messageInput);
+		await _hubConnection.SendAsync("SendMessage", _userInput, _messageInput);
 
 	public bool IsConnected =>
-		hubConnection.State == HubConnectionState.Connected;
+		_hubConnection.State == HubConnectionState.Connected;
 
 	public async ValueTask DisposeAsync()
 	{
-		if (hubConnection is not null)
+		if (_hubConnection is not null)
 		{
-			await hubConnection.DisposeAsync();
+			await _hubConnection.DisposeAsync();
 		}
 	}
 }
