Removed the redundant function, DisplayBoard. And moved the the logic of showing the green squares if all players joined from Game to UI.

--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -23,7 +23,7 @@
 				{
 					<td>
                         <TileComponent Message="@DisplayedBoard[row][col].ToString()" Row="@row" Column="@col" OnMoveSelected="MoveSelected" 
-                                       ShowLegalSquares="@IsUsersTurn"></TileComponent>
+                                       ShowLegalSquares="@(IsUsersTurn && HasAllPlayers)"></TileComponent>
 					</td>
 				}
 			</tr>
@@ -39,6 +39,7 @@
     public string[] DisplayedBoard => GameService.GetOutput();
 
     private bool IsUsersTurn => WhatColourAmI == GameService.GetCurrentPlayer();
+    private bool HasAllPlayers => GameService.HasAllPlayers();
 
     protected async Task MoveSelected(string move)
     {
