--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -23,8 +23,9 @@
 				@for (int col = 0; col < DisplayedBoard.GetLength(1); col++)
 				{
 					<td>
-                        <TileComponent Message="@DisplayedBoard[row,col].ToString()" Row="@row" Column="@col" OnMoveSelected="MoveSelected" 
+                        <TileComponent Message="@DisplayedBoard[row,col].Colour.ToString()" Row="@row" Column="@col"  OnMoveSelected="MoveSelected" 
                                        ShowLegalSquares="@(IsUsersTurn && HasAllPlayers)"></TileComponent>
+                        @*Colour="@DisplayedBoard[row,col].Colour"*@
 					</td>
 				}
 			</tr>
