Removed UI's dependencies to Reversi.Logic; Split Reversi.Web.Services to a separate project (Reversi.Services)

--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.SignalR.Client
-@using Reversi.Web.Services.Interfaces
-@using Reversi.Web.Services;
+@using Reversi.Services.Interfaces
+@using Reversi.Services;
 @inject IGameService GameService
 @inject NavigationManager NavigationManager
 @implements IAsyncDisposable
