--- a/Reversi.Web/BlazorComponents/ScoreComponent.razor
+++ b/Reversi.Web/BlazorComponents/ScoreComponent.razor
@@ -1,6 +1,6 @@
-﻿@using Reversi.Web.Services.Interfaces;
+﻿@using Reversi.Services.Interfaces;
 @using Microsoft.AspNetCore.Components.Web
-@using Reversi.Web.Services;
+@using Reversi.Services;
 
 <br />
 <label><b>SCORE: [ </b></label>
