--- a/Reversi.Web/BlazorComponents/WhoIAm.razor
+++ b/Reversi.Web/BlazorComponents/WhoIAm.razor
@@ -1,4 +1,4 @@
-﻿@using Reversi.Web.Services.Interfaces;
+﻿@using Reversi.Services.Interfaces;
 @using Microsoft.AspNetCore.Components.Web
 
 @if (IsMyTurn)
