--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Reversi.Web.BlazorComponents;
-@using Reversi.Web.Services
-@using Reversi.Web.Services.Interfaces
+@using Reversi.Services
+@using Reversi.Services.Interfaces
 @using Microsoft.AspNetCore.Http
 @inject IGameService GameService
 @{
